Added Damage Component and Death condition.

--- a/AID_Runner/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/AID_Runner/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,10 +131,13 @@ LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Movement_Try.Movement_Try
+OpenAssetsAtExit=/Game/Blueprints/EnemyAI.EnemyAI
+OpenAssetsAtExit=/Game/StarterContent/Maps/Minimal_Default.Minimal_Default:PersistentLevel.Minimal_Default
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1288.000 Y=728.000
+WindowSize=X=1289.600 Y=729.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1877,6 +1880,58 @@ RadialForceComponent.Activation=True
 RadialForceComponent.Variable=True
 RadialForceComponent.Cooking=True
 Movement_Try_C.Default=True
+EnemyAI_C.Character=True
+EnemyAI_C.Tick=True
+EnemyAI_C.Camera=True
+EnemyAI_C.Pawn=True
+EnemyAI_C.Replication=True
+EnemyAI_C.Rendering=True
+EnemyAI_C.Collision=True
+EnemyAI_C.Actor=True
+EnemyAI_C.Input=True
+EnemyAI_C.HLOD=True
+EnemyAI_C.WorldPartition=True
+EnemyAI_C.Events=True
+Minimal_Default_C.Tick=True
+Minimal_Default_C.Replication=True
+Minimal_Default_C.Actor=True
+Minimal_Default_C.Input=True
+Minimal_Default_C.HLOD=True
+Minimal_Default_C.WorldPartition=True
+Minimal_Default_C.Events=True
+EnemyAI_C.TransformCommon=True
+EnemyAI_C.Animation=True
+EnemyAI_C.Mesh=True
+EnemyAI_C.Clothing=True
+EnemyAI_C.Physics=True
+EnemyAI_C.MasterPoseComponent=True
+EnemyAI_C.Lighting=True
+EnemyAI_C.AnimationRig=True
+EnemyAI_C.Deformer=True
+EnemyAI_C.SkinWeights=True
+EnemyAI_C.Navigation=True
+EnemyAI_C.VirtualTexture=True
+EnemyAI_C.Tags=True
+EnemyAI_C.Activation=True
+EnemyAI_C.Cooking=True
+EnemyAI_C.Character Movement (General Settings)=True
+EnemyAI_C.Character Movement: Walking=True
+EnemyAI_C.Character Movement: Jumping / Falling=True
+EnemyAI_C.Character Movement (Networking)=True
+EnemyAI_C.Character Movement: Swimming=True
+EnemyAI_C.Character Movement: Flying=True
+EnemyAI_C.Character Movement: Custom Movement=True
+EnemyAI_C.Character Movement (Rotation Settings)=True
+EnemyAI_C.Character Movement: Physics Interaction=True
+EnemyAI_C.Character Movement=True
+EnemyAI_C.Character Movement: Avoidance=True
+EnemyAI_C.RootMotion=True
+EnemyAI_C.Character Movement: NavMesh Movement=True
+EnemyAI_C.NavMovement=True
+EnemyAI_C.Velocity=True
+EnemyAI_C.PlanarMovement=True
+EnemyAI_C.MovementComponent=True
+EnemyAI_C.Shape=True
 
 [MRU]
 MRUItem0=/Game/StarterContent/Maps/Minimal_Default
@@ -1927,10 +1982,10 @@ LandscapeProxy="\"Object.Collision.BodyInstance\" "
 PartitionActor="\"Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
-Object="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
+Object=
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -1991,17 +2046,20 @@ AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSize=2
+ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Shooting
+MRUItem0=/Game/Blueprints/EnemyAI
 MRUItem1=/Game/Blueprints/Movement_Try
-MRUItem2=/Game/Blueprints/Player_Movement
-MRUItem3=/Game/Blueprints/adssad
-MRUItem4=/Game/NewBlueprint1
-MRUItem5=/Game/Shooting
-MRUItem6=/Game/blueprint/MainCharacter
-MRUItem7=/Game/blueprint/CharacterMovement
-MRUItem8=/Game/blueprint/NewActorComponent
+MRUItem2=/Game/Blueprints/Shooting
+MRUItem3=/Game/Blueprints/Player_Movement
+MRUItem4=/Game/Blueprints/adssad
+MRUItem5=/Game/NewBlueprint1
+MRUItem6=/Game/Shooting
+MRUItem7=/Game/blueprint/MainCharacter
+MRUItem8=/Game/blueprint/CharacterMovement
+MRUItem9=/Game/blueprint/NewActorComponent
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2052,6 +2110,8 @@ GraphEditorQuickJumps=()
 /Game/Blueprints/Player_Movement.Player_Movement=1
 /Game/Blueprints/Shooting.Shooting=1
 /Game/Blueprints/Movement_Try.Movement_Try=1
+/Game/Blueprints/EnemyAI.EnemyAI=1
+/Game/StarterContent/Maps/Minimal_Default.Minimal_Default:PersistentLevel.Minimal_Default=1
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -2073,5 +2133,5 @@ EditorStyleSettings=True
 LevelEditorMiscSettings=True
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
