--- a/AID_Runner/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/AID_Runner/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,13 +131,10 @@ LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Movement_Try.Movement_Try
-OpenAssetsAtExit=/Game/Blueprints/EnemyAI.EnemyAI
-OpenAssetsAtExit=/Game/StarterContent/Maps/Minimal_Default.Minimal_Default:PersistentLevel.Minimal_Default
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1289.600 Y=729.600
+WindowSize=X=1291.200 Y=731.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -154,7 +151,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/SHUBH/Documents/GitHub/runnerAID/AID_Runner/Content/StarterContent/Maps
+UNR=C:/unreal projects/runnerAID/AID_Runner/Content/StarterContent/Maps
 BRUSH=C:/unreal projects/runnerAID/AID_Runner/Content/
 FBX=C:/unreal projects/runnerAID/AID_Runner/Content/
 FBXAnim=C:/unreal projects/runnerAID/AID_Runner/Content/
@@ -1052,12 +1049,12 @@ WidgetCarousel.TimeStamp=2022.12.05-13.38.23
 WidgetCarousel.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2022.12.05-13.38.09
 HierarchicalLODOutliner.LastCompileMethod=Unknown
-Voice.TimeStamp=2022.07.22-17.06.26
-Voice.LastCompileMethod=Unknown
-MovieSceneCapture.TimeStamp=2022.07.22-17.06.22
-MovieSceneCapture.LastCompileMethod=Unknown
-BlueprintGraph.TimeStamp=2022.07.22-17.06.17
-BlueprintGraph.LastCompileMethod=Unknown
+Voice.TimeStamp=2022.12.05-13.38.23
+Voice.LastCompileMethod=External
+MovieSceneCapture.TimeStamp=2022.12.05-13.38.13
+MovieSceneCapture.LastCompileMethod=External
+BlueprintGraph.TimeStamp=2022.12.05-13.38.00
+BlueprintGraph.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2022.07.22-17.06.21
 ExternalImagePicker.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2022.07.22-17.06.21
@@ -1065,8 +1062,8 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/Steam/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Program Files/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/Steam/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -1932,6 +1929,52 @@ EnemyAI_C.Velocity=True
 EnemyAI_C.PlanarMovement=True
 EnemyAI_C.MovementComponent=True
 EnemyAI_C.Shape=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+Spawner_C.Tick=True
+Spawner_C.Replication=True
+Spawner_C.Rendering=True
+Spawner_C.Collision=True
+Spawner_C.Actor=True
+Spawner_C.Input=True
+Spawner_C.HLOD=True
+Spawner_C.WorldPartition=True
+Spawner_C.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.HLOD=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Thumbnail=True
+Spawner_C.TransformCommon=True
 
 [MRU]
 MRUItem0=/Game/StarterContent/Maps/Minimal_Default
@@ -1962,6 +2005,7 @@ SkyAtmosphere=SkyAtmosphere.TransformCommon.Transform,
 InstalledPlugins=XRVisualization
 
 [PlacementMode]
+RecentlyPlaced=/Game/spawiningMechanism/bluePrints/Spawner.Spawner;
 RecentlyPlaced=/Game/Blueprints/Movement_Try.Movement_Try;
 RecentlyPlaced=/Game/Blueprints/Shooting.Shooting;
 RecentlyPlaced=/Game/Blueprints/Player_Movement.Player_Movement;
@@ -1980,17 +2024,19 @@ Info=
 Landscape="\"Object.Collision.BodyInstance\" "
 LandscapeProxy="\"Object.Collision.BodyInstance\" "
 PartitionActor="\"Object.Collision.BodyInstance\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Collision.BodyInstance\" "
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
-Object=
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Collision.BodyInstance\" "
+Object="\"Object.Collision.BodyInstance\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+SphereComponent="\"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" "
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -2010,7 +2056,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/StarterContent/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/spawiningMechanism/Assets/model
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2026,8 +2072,8 @@ ContentBrowserTab1.CollectionAreaExpanded=False
 ContentBrowserTab1.FavoritesSearchAreaExpanded=False
 ContentBrowserTab1.PathSearchAreaExpanded=False
 ContentBrowserTab1.CollectionSearchAreaExpanded=False
-ContentBrowserTab1.VerticalSplitter.SlotSize0=0.150000006
-ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.449597806
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.4504022
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
@@ -2050,16 +2096,17 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/EnemyAI
-MRUItem1=/Game/Blueprints/Movement_Try
-MRUItem2=/Game/Blueprints/Shooting
-MRUItem3=/Game/Blueprints/Player_Movement
-MRUItem4=/Game/Blueprints/adssad
-MRUItem5=/Game/NewBlueprint1
-MRUItem6=/Game/Shooting
-MRUItem7=/Game/blueprint/MainCharacter
-MRUItem8=/Game/blueprint/CharacterMovement
-MRUItem9=/Game/blueprint/NewActorComponent
+MRUItem0=/Game/Blueprints/Movement_Try
+MRUItem1=/Game/spawiningMechanism/bluePrints/Spawner
+MRUItem2=/Game/Blueprints/EnemyAI
+MRUItem3=/Game/Blueprints/Shooting
+MRUItem4=/Game/Blueprints/Player_Movement
+MRUItem5=/Game/Blueprints/adssad
+MRUItem6=/Game/NewBlueprint1
+MRUItem7=/Game/Shooting
+MRUItem8=/Game/blueprint/MainCharacter
+MRUItem9=/Game/blueprint/CharacterMovement
+MRUItem10=/Game/blueprint/NewActorComponent
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2112,6 +2159,7 @@ GraphEditorQuickJumps=()
 /Game/Blueprints/Movement_Try.Movement_Try=1
 /Game/Blueprints/EnemyAI.EnemyAI=1
 /Game/StarterContent/Maps/Minimal_Default.Minimal_Default:PersistentLevel.Minimal_Default=1
+/Game/spawiningMechanism/bluePrints/Spawner.Spawner=1
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -2134,4 +2182,115 @@ LevelEditorMiscSettings=True
 
 [MessageLog]
 LastLogListing=PIE
+
+[FBX_Import_UI_Option_FbxImportUI]
+bOverrideFullName=True
+bCreatePhysicsAsset=True
+bAutoComputeLodDistances=True
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+MinimumLodNumber=0
+LodNumber=0
+bImportAnimations=False
+bImportMaterials=True
+bImportTextures=True
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildReversedIndexBuffer=True
+bBuildNanite=False
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+DistanceFieldResolutionScale=1.000000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUpdateSkeletonReferencePose=False
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+MorphThresholdPosition=0.015000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+bImportMeshesInBoneHierarchy=True
+AnimationLength=FBXALIT_ExportedTime
+FrameImportRange=(Min=0,Max=0)
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bDeleteExistingCustomAttributeCurves=False
+bDeleteExistingNonCurveCustomAttributes=False
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+BaseOpacityTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
 
