movement done bois gg

--- a/AID_Runner/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/AID_Runner/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1291.200 Y=731.200
+WindowSize=X=1292.800 Y=732.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1055,13 +1055,14 @@ MovieSceneCapture.TimeStamp=2022.12.05-13.38.13
 MovieSceneCapture.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2022.12.05-13.38.00
 BlueprintGraph.LastCompileMethod=External
-ExternalImagePicker.TimeStamp=2022.07.22-17.06.21
-ExternalImagePicker.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2022.10.01-09.59.38
+ExternalImagePicker.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2022.07.22-17.06.21
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=D:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Program Files/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Steam/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
@@ -1975,6 +1976,11 @@ Blueprint.BlueprintOptions=True
 Blueprint.Interfaces=True
 Blueprint.Thumbnail=True
 Spawner_C.TransformCommon=True
+pussy_C.Tick=True
+pussy_C.Classes=True
+pussy_C.Game=True
+pussy_C.GameMode=True
+pussy_C.Events=True
 
 [MRU]
 MRUItem0=/Game/StarterContent/Maps/Minimal_Default
@@ -2027,9 +2033,9 @@ PartitionActor="\"Object.Collision.BodyInstance\" "
 StaticMeshComponent=
 MeshComponent=
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
-Object="\"Object.Collision.BodyInstance\" "
+SceneComponent=
+ActorComponent=
+Object=
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -2096,17 +2102,18 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Movement_Try
-MRUItem1=/Game/spawiningMechanism/bluePrints/Spawner
-MRUItem2=/Game/Blueprints/EnemyAI
-MRUItem3=/Game/Blueprints/Shooting
-MRUItem4=/Game/Blueprints/Player_Movement
-MRUItem5=/Game/Blueprints/adssad
-MRUItem6=/Game/NewBlueprint1
-MRUItem7=/Game/Shooting
-MRUItem8=/Game/blueprint/MainCharacter
-MRUItem9=/Game/blueprint/CharacterMovement
-MRUItem10=/Game/blueprint/NewActorComponent
+MRUItem0=/Game/Blueprints/pussy
+MRUItem1=/Game/Blueprints/Movement_Try
+MRUItem2=/Game/spawiningMechanism/bluePrints/Spawner
+MRUItem3=/Game/Blueprints/EnemyAI
+MRUItem4=/Game/Blueprints/Shooting
+MRUItem5=/Game/Blueprints/Player_Movement
+MRUItem6=/Game/Blueprints/adssad
+MRUItem7=/Game/NewBlueprint1
+MRUItem8=/Game/Shooting
+MRUItem9=/Game/blueprint/MainCharacter
+MRUItem10=/Game/blueprint/CharacterMovement
+MRUItem11=/Game/blueprint/NewActorComponent
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2160,6 +2167,7 @@ GraphEditorQuickJumps=()
 /Game/Blueprints/EnemyAI.EnemyAI=1
 /Game/StarterContent/Maps/Minimal_Default.Minimal_Default:PersistentLevel.Minimal_Default=1
 /Game/spawiningMechanism/bluePrints/Spawner.Spawner=1
+/Game/Blueprints/pussy.pussy=1
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -2179,6 +2187,7 @@ bDeleteSourceFilesWithAssets=False
 GeneralProjectSettings=True
 EditorStyleSettings=True
 LevelEditorMiscSettings=True
+GameMapsSettings=True
 
 [MessageLog]
 LastLogListing=PIE
