--- a/AID_Runner/Config/DefaultEngine.ini
+++ b/AID_Runner/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
 
 
 EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+GlobalDefaultGameMode=/Game/Blueprints/pussy.pussy_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
