--- a/AID_Runner/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/AID_Runner/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,10 +131,11 @@ LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Movement_Try.Movement_Try
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1292.800 Y=732.800
+WindowSize=X=1296.000 Y=736.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -151,7 +152,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/unreal projects/runnerAID/AID_Runner/Content/StarterContent/Maps
+UNR=C:/Users/SHUBH/Documents/GitHub/runnerAID/AID_Runner/Content/StarterContent/Maps
 BRUSH=C:/unreal projects/runnerAID/AID_Runner/Content/
 FBX=C:/unreal projects/runnerAID/AID_Runner/Content/
 FBXAnim=C:/unreal projects/runnerAID/AID_Runner/Content/
@@ -1062,9 +1063,9 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=D:/Steam/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Program Files/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=D:/Steam/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -1981,6 +1982,14 @@ pussy_C.Classes=True
 pussy_C.Game=True
 pussy_C.GameMode=True
 pussy_C.Events=True
+RotatingMovementComponent.RotatingComponent=True
+RotatingMovementComponent.PlanarMovement=True
+RotatingMovementComponent.MovementComponent=True
+RotatingMovementComponent.Tags=True
+RotatingMovementComponent.ComponentReplication=True
+RotatingMovementComponent.Activation=True
+RotatingMovementComponent.Variable=True
+RotatingMovementComponent.Cooking=True
 
 [MRU]
 MRUItem0=/Game/StarterContent/Maps/Minimal_Default
@@ -2011,8 +2020,8 @@ SkyAtmosphere=SkyAtmosphere.TransformCommon.Transform,
 InstalledPlugins=XRVisualization
 
 [PlacementMode]
-RecentlyPlaced=/Game/spawiningMechanism/bluePrints/Spawner.Spawner;
 RecentlyPlaced=/Game/Blueprints/Movement_Try.Movement_Try;
+RecentlyPlaced=/Game/spawiningMechanism/bluePrints/Spawner.Spawner;
 RecentlyPlaced=/Game/Blueprints/Shooting.Shooting;
 RecentlyPlaced=/Game/Blueprints/Player_Movement.Player_Movement;
 RecentlyPlaced=/Game/StarterContent/Blueprints/NewBlueprint1.NewBlueprint1;
@@ -2030,10 +2039,10 @@ Info=
 Landscape="\"Object.Collision.BodyInstance\" "
 LandscapeProxy="\"Object.Collision.BodyInstance\" "
 PartitionActor="\"Object.Collision.BodyInstance\" "
-StaticMeshComponent=
-MeshComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent=
+SceneComponent="\"Object.Collision.BodyInstance\" "
 ActorComponent=
 Object=
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -2102,8 +2111,8 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/pussy
-MRUItem1=/Game/Blueprints/Movement_Try
+MRUItem0=/Game/Blueprints/Movement_Try
+MRUItem1=/Game/Blueprints/pussy
 MRUItem2=/Game/spawiningMechanism/bluePrints/Spawner
 MRUItem3=/Game/Blueprints/EnemyAI
 MRUItem4=/Game/Blueprints/Shooting
