AI done(Not all Test cases done)

--- a/AID_Runner/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/AID_Runner/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,11 +131,13 @@ LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/StarterContent/Maps/Minimal_Default.Minimal_Default:PersistentLevel.Minimal_Default
+OpenAssetsAtExit=/Game/Blueprints/EnemyAI.EnemyAI
 OpenAssetsAtExit=/Game/Blueprints/Movement_Try.Movement_Try
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1296.000 Y=736.000
+WindowSize=X=1297.600 Y=737.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2043,8 +2045,8 @@ StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent=
-Object=
+ActorComponent="\"Object.Collision.BodyInstance\" "
+Object="\"Object.Collision.BodyInstance\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -2112,9 +2114,9 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Movement_Try
-MRUItem1=/Game/Blueprints/pussy
-MRUItem2=/Game/spawiningMechanism/bluePrints/Spawner
-MRUItem3=/Game/Blueprints/EnemyAI
+MRUItem1=/Game/Blueprints/EnemyAI
+MRUItem2=/Game/Blueprints/pussy
+MRUItem3=/Game/spawiningMechanism/bluePrints/Spawner
 MRUItem4=/Game/Blueprints/Shooting
 MRUItem5=/Game/Blueprints/Player_Movement
 MRUItem6=/Game/Blueprints/adssad
