--- a/AID_Runner/Config/DefaultInput.ini
+++ b/AID_Runner/Config/DefaultInput.ini
@@ -74,8 +74,10 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+AxisMappings=(AxisName="Roll",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="Roll",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Roll",Scale=-1.000000,Key=Q)
++AxisMappings=(AxisName="Roll",Scale=1.000000,Key=E)
++AxisMappings=(AxisName="Pitch",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Pitch",Scale=-1.000000,Key=S)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
