--- a/AID_Runner/Saved/Config/WindowsEditor/Engine.ini
+++ b/AID_Runner/Saved/Config/WindowsEditor/Engine.ini
@@ -30,6 +30,7 @@ Paths=../../../Engine/Plugins/Runtime/HairStrands/Content
 Paths=../../../Engine/Plugins/Runtime/MeshModelingToolset/Content
 Paths=../../../Engine/Plugins/Runtime/ResonanceAudio/Content
 Paths=../../../Engine/Plugins/Runtime/Synthesis/Content
+Paths=../../../Engine/Plugins/Experimental/GeometryScripting/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
@@ -54,12 +55,4 @@ JavaPath=(Path="")
 [/Script/UnrealEd.UnrealEdEngine]
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/OpenWorld",Map="/Engine/Maps/Templates/OpenWorld",DisplayName="Open World",Category="OpenWorld")
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/Basic",Map="/Engine/Maps/Templates/Template_Default",DisplayName="Basic",Category="")
-
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=True
-FilterKeysHotkey=True
-StickyKeysConfirmation=True
-ToggleKeysConfirmation=True
-FilterKeysConfirmation=True
 
