Fixing asset models

--- a/AID_Runner.uproject
+++ b/AID_Runner.uproject
@@ -14,6 +14,14 @@
 		{
 			"Name": "GeometryScripting",
 			"Enabled": true
+		},
+		{
+			"Name": "StaticMeshEditorModeling",
+			"Enabled": true
+		},
+		{
+			"Name": "GLTFImporter",
+			"Enabled": true
 		}
 	]
 }
