--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -76,12 +76,17 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ThrottleUP",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="ThrottleDOWN",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
++ActionMappings=(ActionName="ThrottleUP",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
++ActionMappings=(ActionName="ThrottleDOWN",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
 +AxisMappings=(AxisName="Roll",Scale=1.000000,Key=Q)
 +AxisMappings=(AxisName="Roll",Scale=-1.000000,Key=E)
 +AxisMappings=(AxisName="Pitch",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Pitch",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Yaw",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Yaw",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="Pitch",Scale=-0.250000,Key=MouseY)
++AxisMappings=(AxisName="Yaw",Scale=0.250000,Key=MouseX)
++AxisMappings=(AxisName="Roll",Scale=-0.250000,Key=Mouse2D)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
