Added preliminary start menu, moved files into categories

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,11 +1,11 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StarterContent/Maps/MainMap.MainMap
+GameDefaultMap=/Game/RunnerAID/Maps/EmptyMap.EmptyMap
 
 
-EditorStartupMap=/Game/StarterContent/Maps/MainMap.MainMap
-GlobalDefaultGameMode=/Game/Blueprints/pussy.pussy_C
+EditorStartupMap=/Game/RunnerAID/Maps/EmptyMap.EmptyMap
+GlobalDefaultGameMode=/Game/RunnerAID/Blueprints/GameMainMode.GameMainMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
