--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,7 +2,10 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D0F1EB26466D29183DF9768C1D09E8E4
+ProjectName=RunnerAID
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "3F4D98984A5D03EA1C75258C15E11801", "RunnerAID")
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
