--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -78,6 +78,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ThrottleDOWN",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +ActionMappings=(ActionName="ThrottleUP",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
 +ActionMappings=(ActionName="ThrottleDOWN",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +AxisMappings=(AxisName="Roll",Scale=1.000000,Key=Q)
 +AxisMappings=(AxisName="Roll",Scale=-1.000000,Key=E)
 +AxisMappings=(AxisName="Pitch",Scale=1.000000,Key=W)
