Dynamic main menu, pause menu & more
> Fixed autopilot
> Made main menu background dynamic
> Finished Pause Menu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,11 +1,13 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/RunnerAID/Maps/EmptyMap.EmptyMap
+GameDefaultMap=/Game/RunnerAID/Maps/MainMap.MainMap
 
 
-EditorStartupMap=/Game/RunnerAID/Maps/EmptyMap.EmptyMap
+EditorStartupMap=/Game/RunnerAID/Maps/MainMap.MainMap
 GlobalDefaultGameMode=/Game/RunnerAID/Blueprints/GameMainMode.GameMainMode_C
+ServerDefaultMap=/Game/RunnerAID/Maps/MainMap.MainMap
+TransitionMap=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
