--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -80,15 +80,18 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ThrottleDOWN",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Pause)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 +AxisMappings=(AxisName="Roll",Scale=1.000000,Key=Q)
 +AxisMappings=(AxisName="Roll",Scale=-1.000000,Key=E)
 +AxisMappings=(AxisName="Pitch",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Pitch",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Yaw",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Yaw",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="Pitch",Scale=-0.400000,Key=MouseY)
-+AxisMappings=(AxisName="Yaw",Scale=0.400000,Key=MouseX)
-+AxisMappings=(AxisName="Roll",Scale=-0.400000,Key=Mouse2D)
++AxisMappings=(AxisName="Pitch",Scale=-0.250000,Key=MouseY)
++AxisMappings=(AxisName="Yaw",Scale=0.250000,Key=MouseX)
++AxisMappings=(AxisName="Roll",Scale=-0.250000,Key=Mouse2D)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
