--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,6 +4,9 @@
 ProjectID=D0F1EB26466D29183DF9768C1D09E8E4
 ProjectName=RunnerAID
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "3F4D98984A5D03EA1C75258C15E11801", "RunnerAID")
+CompanyName=ANS Studios
+Homepage="https://github.com/nikhil-garg119/runnerAID"
+Description=Endless Runner Game
 
 [StartupActions]
 bAddPacks=True
