Project settings & other UI changes

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -12,3 +12,6 @@ Description=Endless Runner Game
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+
