Post Process Effects, Entity Subclasses
> Added Shield post-process vignette to indicate shield charge
> Added Damage post-process vignette to indicate low health
> Refactored EnemyBP as EntityBP, whilst adding subclasses of WBC, RBC & Bacteria

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,6 +8,7 @@ EditorStartupMap=/Game/RunnerAID/Maps/MainMap.MainMap
 GlobalDefaultGameMode=/Game/RunnerAID/Blueprints/GameMainMode.GameMainMode_C
 ServerDefaultMap=/Game/RunnerAID/Maps/MainMap.MainMap
 TransitionMap=None
+GlobalDefaultServerGameMode=/Game/RunnerAID/Blueprints/Framework/GameMainMode.GameMainMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
