--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,9 @@ Plugins/*/Binaries/*
 # Builds
 Build/*
 
+# Packaged Applications (requires GIT LFS)
+Windows/*
+
 # Whitelist PakBlacklist-<BuildConfiguration>.txt files
 !Build/*/
 Build/*/**
