--- a/AID_Runner.uproject
+++ b/AID_Runner.uproject
@@ -22,6 +22,10 @@
 		{
 			"Name": "GLTFImporter",
 			"Enabled": true
+		},
+		{
+			"Name": "AlembicHairImporter",
+			"Enabled": true
 		}
 	]
 }
