--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ GameDefaultMap=/Game/RunnerAID/Maps/MainMap.MainMap
 
 
 EditorStartupMap=/Game/RunnerAID/Maps/MainMap.MainMap
-GlobalDefaultGameMode=/Game/RunnerAID/Blueprints/GameMainMode.GameMainMode_C
+GlobalDefaultGameMode=/Game/RunnerAID/Blueprints/Framework/GameMainMode.GameMainMode_C
 ServerDefaultMap=/Game/RunnerAID/Maps/MainMap.MainMap
 TransitionMap=None
 GlobalDefaultServerGameMode=/Game/RunnerAID/Blueprints/Framework/GameMainMode.GameMainMode_C
@@ -17,7 +17,31 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
+Compiler=Default
+-TargetedRHIs=PCD3D_SM5
++TargetedRHIs=PCD3D_SM5
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
+AudioSampleRate=48000
+AudioCallbackBufferFrameSize=1024
+AudioNumBuffersToEnqueue=1
+AudioMaxChannels=0
+AudioNumSourceWorkers=4
+SpatializationPlugin=
+SourceDataOverridePlugin=
+ReverbPlugin=
+OcclusionPlugin=
+CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=0,SoundCueQualityIndex=0)
+CacheSizeKB=65536
+MaxChunkSizeOverrideKB=0
+bResampleForDevice=False
+MaxSampleRate=48000.000000
+HighSampleRate=32000.000000
+MedSampleRate=24000.000000
+LowSampleRate=12000.000000
+MinSampleRate=8000.000000
+CompressionQualityModifier=1.000000
+AutoStreamingThreshold=0.000000
+SoundCueCookQualityIndex=-1
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
